Fixed layout issues

--- a/test-angular-project/src/app/partials/components/main/main.component.css
+++ b/test-angular-project/src/app/partials/components/main/main.component.css
@@ -1,7 +1,7 @@
 .main-container {
     display: flex;
     flex-direction: column;
-    height: 97vh;
+    height: 100%;
 }
 
 .nav-bar-container {
