--- a/test-angular-project/src/app/partials/components/task/task.component.css
+++ b/test-angular-project/src/app/partials/components/task/task.component.css
@@ -23,6 +23,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding: 10px;
+    background-color: #FAFAFA;
+    height: 50.5px;
 }
 
 .task-actions-card > div {
@@ -73,5 +76,19 @@
     color: #E0E0E0;
     font-family: Helvetica;
     font-weight: bold;
+}
 
+.mat-paginator {
+    background-color: #303030;
+    color: #E0E0E0;
+    font-family: Helvetica;
+    font-weight: bold;
+    position: relative;
+    bottom: -21.5px;
+}
+
+.table-container {
+    height: calc(100% - 106.4px);
+    overflow: auto;
+    background-color: #F5F5F5;
 }
