--- a/test-angular-project/src/styles.css
+++ b/test-angular-project/src/styles.css
@@ -3,3 +3,13 @@
 /* body {
     background-color: #212121;
 } */
+
+html {
+    height: 100%;
+}
+
+body {
+    height: calc(100% - 16px);
+    margin: 0px;
+    border: 8px solid #757575;
+}
